Added the AboutSegment feature, you can see this in use on Cosora, it's a little raw right now, but I'm planning to polish it in the next commit.
Refactored the code to use switches instead of if blocks in some places.
Refactored the Dashboard to make it easier to add icons to it like I did with Cosora.
You can now use maps in transpiled templates.
Made progress on Cosora's footer.
Swapped out the ThemeName property in the HeaderVars struct for a more general and flexible Theme property.
Added the colstack CSS class to make it easier to style the layouts for the Control Panel and profile.
Renamed the FStore variable to Forums.
Renamed the Fpstore variable to FPStore.
Renamed the Gstore variable to Groups.
Split the MemoryTopicStore into DefaultTopicStore and MemoryTopicCache.
Split the MemoryUserStore into DefaultUserStore and MemoryUserCache.
Removed the NullUserStore, SQLUserStore, and SQLTopicStore.
Added the NullTopicCache and NullUserCache.
Moved the Reload method out of the TopicCache interface and into the TopicStore one.
Moved the Reload method out of the UserCache interface and into the UserStore one.
Added the SetCache and GetCache methods to the TopicStore and UserStore.
Added the BypassGetAll method to the WordFilterMap type.
Renamed routePanelSetting to routePanelSettingEdit.
Renamed routePanelSettingEdit to routePanelSettingEditSubmit.
Moved the page titles into the english language pack.
Split main() into main and afterDBInit to avoid code duplication in general_test.go
Added the ReqIsJson method so that we don't have to sniff the headers every time.
Added the LogStore interface.
Added the SQLModLogStore and the SQLAdminLogStore.
Refactored the phrase system to use getPhrasePlaceholder instead of hard-coding the string to return in a bunch of functions.
Removed a redundant rank check.
Added the GuildStore to plugin_guilds.
Added the about_segment_title and about_segment_body settings.
Refactored the setting system to use predefined errors to make it e

--- a/langs/english.json
+++ b/langs/english.json
@@ -55,5 +55,36 @@
 	"Accounts": {
 		"VerifyEmailSubject": "Validate Your Email @  {{name}}",
 		"VerifyEmailBody": "Dear {{username}}, following your registration on our forums, we ask you to validate your email, so that we can confirm that this email actually belongs to you.\n\nClick on the following link to do so. {{schema}}://{{url}}/user/edit/token/{{token}}\n\nIf you haven't created an account here, then please feel free to ignore this email.\nWe're sorry for the inconvenience this may have caused."
+	},
+	"Errors": {
+		"NoPerms": {
+		}
+	},
+	"PageTitles": {
+		"overview":"Overview",
+		"page":"Page",
+		"topics":"All Topics",
+		"forums":"Forum List",
+		"login":"Login",
+		"register":"Registration",
+		"ip-search":"IP Search",
+
+		"panel-dashboard":"Control Panel Dashboard",
+		"panel-forums":"Forum Manager",
+		"panel-delete-forum":"Delete Forum",
+		"panel-edit-forum":"Forum Editor",
+		"panel-settings":"Setting Manager",
+		"panel-edit-setting":"Edit Setting",
+		"panel-word-filters":"Word Filter Manager",
+		"panel-edit-word-filter":"Edit Word Filter",
+		"panel-plugins":"Plugin Manager",
+		"panel-users":"User Manager",
+		"panel-edit-user":"User Editor",
+		"panel-groups":"Group Manager",
+		"panel-edit-group":"Group Editor",
+		"panel-themes":"Theme Manager",
+		"panel-backups":"Backups",
+		"panel-mod-logs":"Moderation Logs",
+		"panel-debug":"Debug"
 	}
 }
