Renamed the pre_render_panel_mod_log pre-render hook to pre_render_panel_modlogs. Added the half-second task type, you'll why later ;) Reduced the amount of code duplication in the panel routes (saved a hundred lines). Added the two day time range option for graphs. We now track the discord, lynx and blank user agents. Renamed some template files for consistency and to help stamp out some duplicate code.
Began work on topic move.

--- a/langs/english.json
+++ b/langs/english.json
@@ -69,23 +69,24 @@
 		"register":"Registration",
 		"ip-search":"IP Search",
 
-		"panel-dashboard":"Control Panel Dashboard",
-		"panel-forums":"Forum Manager",
-		"panel-delete-forum":"Delete Forum",
-		"panel-edit-forum":"Forum Editor",
-		"panel-analytics":"Analytics",
-		"panel-settings":"Setting Manager",
-		"panel-edit-setting":"Edit Setting",
-		"panel-word-filters":"Word Filter Manager",
-		"panel-edit-word-filter":"Edit Word Filter",
-		"panel-plugins":"Plugin Manager",
-		"panel-users":"User Manager",
-		"panel-edit-user":"User Editor",
-		"panel-groups":"Group Manager",
-		"panel-edit-group":"Group Editor",
-		"panel-themes":"Theme Manager",
-		"panel-backups":"Backups",
-		"panel-mod-logs":"Moderation Logs",
-		"panel-debug":"Debug"
+		"panel_dashboard":"Control Panel Dashboard",
+		"panel_forums":"Forum Manager",
+		"panel_delete_forum":"Delete Forum",
+		"panel_edit_forum":"Forum Editor",
+		"panel_analytics":"Analytics",
+		"panel_settings":"Setting Manager",
+		"panel_edit_setting":"Edit Setting",
+		"panel_word_filters":"Word Filter Manager",
+		"panel_edit_word_filter":"Edit Word Filter",
+		"panel_plugins":"Plugin Manager",
+		"panel_users":"User Manager",
+		"panel_edit_user":"User Editor",
+		"panel_groups":"Group Manager",
+		"panel_edit_group":"Group Editor",
+		"panel_themes":"Theme Manager",
+		"panel_backups":"Backups",
+		"panel_mod_logs":"Moderation Logs",
+		"panel_admin_logs":"Administration Logs",
+		"panel_debug":"Debug"
 	}
 }
