We now have analytics for the operating systems used by users.
Route view bumping logs have been moved from regular debug mode to super debug to reduce the amount of noise.
Added user friendly agent names.
Reduced the amount of logging outside of debug mode.
We now track Mobile Safari and the Samsung Browser.
We now track SeznamBot, TwitterBot, and Discourse's Bot.
We now track Trident.
UAs are now filtered to reduce the amount of bad activity.
Added more bad phrases for bad routes.

Added the viewchunks_systems table.
Began work on referrer tracking.

--- a/langs/english.json
+++ b/langs/english.json
@@ -89,5 +89,45 @@
 		"panel_mod_logs":"Moderation Logs",
 		"panel_admin_logs":"Administration Logs",
 		"panel_debug":"Debug"
+	},
+
+	"UserAgents": {
+		"chrome": "Google Chrome",
+		"firefox":"Mozilla Firefox",
+		"opera":"Opera",
+		"safari":"Safari",
+		"edge": "Edge",
+		"internetexplorer":"MS Internet Explorer",
+		"trident":"Trident Engine",
+		"androidchrome":"Chrome for Android",
+		"mobilesafari":"Mobile Safari",
+		"samsung":"Samsung Browser",
+		"ucbrowser":"UCBrowser",
+
+		"googlebot":"Googlebot",
+		"yandex":"Yandex",
+		"bing":"Bing",
+		"baidu":"Baidu",
+		"duckduckgo":"DuckDuckBot",
+		"seznambot":"SeznamBot",
+		"discord":"Discord",
+		"twitter":"Twitterbot",
+		"cloudflare":"Cloudflare Alwayson",
+		"uptimebot":"Uptimebot",
+		"discourse":"Discourse Forum Onebox",
+		"lynx":"Lynx",
+		
+		"zgrab":"Zgrab Application Scanner",
+		"suspicious":"Suspicious",
+		"unknown":"Unknown",
+		"blank":"Blank",
+		"malformed":"Malformed"
+	},
+	"OperatingSystems": {
+		"windows": "Microsoft Windows",
+		"linux":"Linux",
+		"android": "Android",
+		"iphone":"iPhone",
+		"unknown":"Unknown"
 	}
 }
