Added support for phrases in templates. The language of the end-user is now tracked and presented in the Analytics Manager. Profile owners now get alerts when someone posts on their profiles.
The login page is now transpiled, estimated to be sixty times faster.
The registration page is now transpiled, estimated to be sixty times faster.
The IP Search page is now transpiled, estimated to be sixty times faster.
The error pages are now transpiled, estimated to be sixty times faster.
The login page now uses phrases.
The registration page now uses phrases.
IP Search now uses phrases.
Renamed the ip-search template to ip_search.
Alerts are now held in an alertbox container div.
Added ids for the main container divs for the account manager sections.
Added an id to the main container for the topic list template.
Added an id to the main container for the forum list template.
Added an id to the main container for the forum template.
Added an avatar box CSS class for the avatar box in the account manager's avatar page.
Did a bit of renaming for a future refactor in the routes counter.
Did a bit of renaming for a future refactor in the operating system counter.
A notice is shown to the user now when their account is inactive.
The account activation status is now fetched by the user store.
We now track Slackbot.
You can now prepend strings to the start of router.DumpRequest request dumps to avoid tearing these bits of contextual data away from the bodies.
.action file extensions are now seen as suspicious by the router.
Moved routeWebsockets to common.RouteWebsockets for now.
Moved routeCreateReplySubmit to routes.CreateReplySubmit.
Moved alert.go into common.
Moved the WebSockets logic into common.
Escape strings a little earlier in the analytics routes and use integers instead of strings where possible.
We now show a success notification when you update a user via the User Manager.
Split the configuration properties off from CTemplateSet into CTemplateConfig.
Renamed some of t

--- a/langs/english.json
+++ b/langs/english.json
@@ -1,9 +1,11 @@
 {
 	"Name": "english",
+	
 	"Levels": {
 		"Level": "Level {0}",
 		"LevelMax": ""
 	},
+
 	"GlobalPerms": {
 		"BanUsers":              "Can ban users",
 		"ActivateUsers":         "Can activate users",
@@ -27,6 +29,7 @@
 
 		"UploadFiles": "Can upload files"
 	},
+
 	"LocalPerms": {
 		"ViewTopic":   "Can view topics",
 		"LikeItem":    "Can like items",
@@ -40,9 +43,11 @@
 		"CloseTopic":  "Can lock topics",
 		"MoveTopic": "Can move topics in or out"
 	},
+
 	"SettingLabels": {
 		"activation_type": "Activate All,Email Activation,Admin Approval"
 	},
+
 	"PermPresets": {
 		"all":"Public",
 		"announce":"Announcements",
@@ -53,14 +58,17 @@
 		"custom":"Custom",
 		"unknown":"Unknown"
 	},
+
 	"Accounts": {
 		"VerifyEmailSubject": "Validate Your Email @  {{name}}",
 		"VerifyEmailBody": "Dear {{username}}, following your registration on our forums, we ask you to validate your email, so that we can confirm that this email actually belongs to you.\n\nClick on the following link to do so. {{schema}}://{{url}}/user/edit/token/{{token}}\n\nIf you haven't created an account here, then please feel free to ignore this email.\nWe're sorry for the inconvenience this may have caused."
 	},
+
 	"Errors": {
 		"NoPerms": {
 		}
 	},
+
 	"PageTitles": {
 		"overview":"Overview",
 		"page":"Page",
@@ -68,7 +76,7 @@
 		"forums":"Forum List",
 		"login":"Login",
 		"register":"Registration",
-		"ip-search":"IP Search",
+		"ip_search":"IP Search",
 
 		"panel_dashboard":"Control Panel Dashboard",
 		"panel_forums":"Forum Manager",
@@ -114,6 +122,7 @@
 		"twitter":"Twitterbot",
 		"cloudflare":"Cloudflare Alwayson",
 		"uptimebot":"Uptimebot",
+		"slackbot":"Slackbot",
 		"discourse":"Discourse Forum Onebox",
 		"lynx":"Lynx",
 		
@@ -123,6 +132,7 @@
 		"blank":"Blank",
 		"malformed":"Malformed"
 	},
+
 	"OperatingSystems": {
 		"windows": "Microsoft Windows",
 		"linux":"Linux",
@@ -130,5 +140,110 @@
 		"android": "Android",
 		"iphone":"iPhone",
 		"unknown":"Unknown"
+	},
+
+	"HumanLanguages": {
+		"af":"Afrikaans",
+		"ar":"Arabic",
+		"az":"Azeri (Latin)",
+		"be":"Belarusian",
+		"bg":"Bulgarian",
+		"bs":"Bosnian (Bosnia and Herzegovina)",
+		"ca":"Catalan",
+		"cs":"Czech",
+		"cy":"Welsh",
+		"da":"Danish",
+		"de":"German",
+		"dv":"Divehi",
+		"el":"Greek",
+		"en":"English",
+		"eo":"Esperanto",
+		"es":"Spanish",
+		"et":"Estonian",
+		"eu":"Basque",
+		"fa":"Farsi",
+		"fi":"Finnish",
+		"fo":"Faroese",
+		"fr":"French",
+		"gl":"Galician",
+		"gu":"Gujarati",
+		"he":"Hebrew",
+		"hi":"Hindi",
+		"hr":"Croatian",
+		"hu":"Hungarian",
+		"hy":"Armenian",
+		"id":"Indonesian",
+		"is":"Icelandic",
+		"it":"Italian",
+		"ja":"Japanese",
+		"ka":"Georgian",
+		"kk":"Kazakh",
+		"kn":"Kannada",
+		"ko":"Korean",
+		"kok":"Konkani",
+		"ky":"Kyrgyz",
+		"lt":"Lithuanian",
+		"lv":"Latvian",
+		"mi":"Maori",
+		"mk":"FYRO Macedonian",
+		"mn":"Mongolian",
+		"mr":"Marathi",
+		"ms":"Malay",
+		"mt":"Maltese",
+		"nb":"Norwegian (Bokm?l)",
+		"nl":"Dutch",
+		"nn":"Norwegian (Nynorsk) (Norway)",
+		"ns":"Northern Sotho",
+		"pa":"Punjabi",
+		"pl":"Polish",
+		"ps":"Pashto",
+		"pt":"Portuguese",
+		"qu":"Quechua",
+		"ro":"Romanian",
+		"ru":"Russian",
+		"sa":"Sanskrit",
+		"se":"Sami (Northern)",
+		"sk":"Slovak",
+		"sl":"Slovenian",
+		"sq":"Albanian",
+		"sr":"Serbian (Latin)",
+		"sv":"Swedish",
+		"sw":"Swahili",
+		"syr":"Syriac",
+		"ta":"Tamil",
+		"te":"Telugu",
+		"th":"Thai",
+		"tl":"Tagalog",
+		"tn":"Tswana",
+		"tr":"Turkish",
+		"tt":"Tatar",
+		"ts":"Tsonga",
+		"uk":"Ukrainian",
+		"ur":"Urdu",
+		"uz":"Uzbek (Latin)",
+		"vi":"Vietnamese",
+		"xh":"Xhosa",
+		"zh":"Chinese",
+		"zu":"Zulu"
+	},
+
+	"TmplPhrases": {
+		"login_head":"Login",
+		"login_account_name":"Account Name",
+		"login_account_password":"Password",
+		"login_submit_button":"Login",
+		"login_no_account":"Don't have an account?",
+
+		"register_head":"Create Account",
+		"register_account_name":"Account Name",
+		"register_account_email":"Email",
+		"register_account_password":"Password",
+		"register_account_confirm_password":"Confirm Password",
+		"register_submit_button":"Create Account",
+
+		"ip_search_head":"IP Search",
+		"ip_search_no_users":"No users found.",
+
+		"error_head":"An error has occured"
 	}
 }
