Added support for phrases in CSS files. Add support for phrases in template files. Revamped every template to make them use phrases. Revamped every CSS file to make them use phrases.
Tweaked the contributing document.
We now use LogError instead of log.Fatal() in a few places to capture more stack traces.
Fixed the suffixes on the topic and post count pages, as they were saying views instead of posts / topics.
Split the paginator into it's own template.
Refactored the theme logic to defer loading the static files to a later stage.
Greatly improved the accessibility with a number of ARIA attributes in places where there were none.
Removed the edit-topic and page templates.
Renamed the panel-adminlogs template to panel_adminlogs.
Non-existent phrases used by transpiled templates should now be logged.
Fixed a bug where alertbox was plopped down multiple times on one page.
The phrase placeholders are more informative now.
Added the CurrentLanguagePackName and GetLanguagePackByName API functions.
Notices are now shown when you delete, update, or create a forum.

--- a/langs/english.json
+++ b/langs/english.json
@@ -228,6 +228,26 @@
 	},
 
 	"TmplPhrases": {
+		"menu_forums_tooltip":"Forum List",
+		"menu_forums_aria":"The Forum list",
+		"menu_topics_tooltip":"Topic List",
+		"menu_topics_aria":"The topic list",
+		"menu_alert_counter_aria":"The number of alerts",
+		"menu_alert_list_aria":"The alert list",
+		"menu_account_tooltip":"Account Manager",
+		"menu_account_aria":"The account manager",
+		"menu_profile_tooltip":"Your profile",
+		"menu_profile_aria":"Your profile",
+		"menu_panel_tooltip":"Control Panel",
+		"menu_panel_aria":"The Control Panel",
+		"menu_logout_tooltip":"Logout",
+		"menu_logout_aria":"Log out of your account",
+		"menu_register_tooltip":"Register",
+		"menu_register_aria":"Create a new account",
+		"menu_login_tooltip":"Login",
+		"menu_login_aria":"Login to your account",
+		"menu_hamburger_tooltip":"Menu",
+		
 		"login_head":"Login",
 		"login_account_name":"Account Name",
 		"login_account_password":"Password",
@@ -241,9 +261,440 @@
 		"register_account_confirm_password":"Confirm Password",
 		"register_submit_button":"Create Account",
 
+		"account_menu_head":"My Account",
+		"account_menu_avatar":"Avatar",
+		"account_menu_username":"Username",
+		"account_menu_password":"Password",
+		"account_menu_email":"Email",
+		"account_menu_notifications":"Notifications",
+
+		"account_avatar_head":"Edit Avatar",
+		"account_avatar_upload_label":"Upload Avatar",
+		"account_avatar_update_button":"Update",
+
+		"account_email_head":"Emails",
+		"account_email_primary":"Primary",
+		"account_email_secondary":"Secondary",
+		"account_email_verified":"Verified",
+		"account_email_resend_email":"Resend Verification Email",
+
+		"account_username_head":"Edit Username",
+		"account_username_current_username":"Current Username",
+		"account_username_new_username":"New Username",
+		"account_username_update_button":"Update",
+
+		"account_password_head":"Edit Password",
+		"account_password_current_password":"Current Password",
+		"account_password_new_password":"New Password",
+		"account_password_confirm_password":"Confirm Password",
+		"account_password_update_button":"Update",
+
+		"areyousure_head":"Are you sure?",
+		"areyousure_continue":"Continue",
+
+		"create_topic_head":"Create Topic",
+		"create_topic_board":"Board",
+		"create_topic_name":"Topic Name",
+		"create_topic_content":"Content",
+		"create_topic_placeholder":"Insert content here",
+		"create_topic_create_topic_button":"Create Topic",
+		"create_topic_add_file_button":"Add File",
+
+		"quick_topic_aria":"Quick Topic Form",
+		"quick_topic_avatar_tooltip":"Your Avatar",
+		"quick_topic_avatar_alt":"Your Avatar",
+		"quick_topic_whatsup":"What's up?",
+		"quick_topic_placeholder":"Insert post here",
+		"quick_topic_add_poll_option":"Add new poll option",
+		"quick_topic_create_topic_button":"Create Topic",
+		"quick_topic_add_poll_button":"Add Poll",
+		"quick_topic_add_file_button":"Add File",
+		"quick_topic_cancel_button":"Cancel",
+
+		"topic_list_create_topic_tooltip":"Create Topic",
+		"topic_list_create_topic_aria":"Create a topic",
+		"topic_list_moderate_tooltip":"Moderate",
+		"topic_list_moderate_aria":"Moderate Posts",
+		"topic_list_what_to_do":"What do you want to do with these 18 topics?",
+		"topic_list_moderate_delete":"Delete them",
+		"topic_list_moderate_lock":"Lock them",
+		"topic_list_moderate_move":"Move them",
+		"topic_list_moderate_run":"Run",
+		"topic_list_move_head":"Move these topics to?",
+		"topic_list_move_button":"Move Topics",
+		"status_closed_tooltip":"Status: Closed",
+		"status_pinned_tooltip":"Status: Pinned",
+
+		"topics_head":"All Topics",
+		"topics_locked_tooltip":"You don't have the permissions needed to create a topic",
+		"topics_locked_aria":"You don't have the permissions needed to make a topic anywhere",
+		"topics_list_aria":"A list containing topics from every forum",
+		"topics_no_topics":"There aren't any topics yet.",
+		"topics_start_one":"Start one?",
+
+		"forum_locked_tooltip":"You don't have the permissions needed to create a topic",
+		"forum_locked_aria":"You don't have the permissions needed to make a topic in this forum",
+		"forum_list_aria":"A list containing topics for the specified forum",
+		"forum_no_topics":"There aren't any topics in this forum yet.",
+		"forum_start_one":"Start one?",
+
+		"forums_head":"Forums",
+		"forums_no_description":"No description",
+		"forums_none":"None",
+		"forums_no_forums":"You don't have access to any forums.",
+
+		"topic_opening_post_aria":"The opening post for this topic",
+		"topic_status_closed_aria":"This topic has been locked",
+		"topic_title_input_aria":"Topic Title Input",
+		"topic_update_button":"Update",
+		"topic_userinfo_aria":"The information on the poster",
+		"topic_poll_aria":"The main poll for this topic",
+		"topic_poll_vote":"Vote",
+		"topic_poll_results":"Results",
+		"topic_poll_cancel":"Cancel",
+		"topic_post_controls_aria":"Controls and Author Information",
+		"topic_unlike_tooltip":"Unlike",
+		"topic_unlike_aria":"Unlike this topic",
+		"topic_like_tooltip":"Like",
+		"topic_like_aria":"Like this topic",
+		"topic_edit_tooltip":"Edit Topic",
+		"topic_edit_aria":"Edit this topic",
+		"topic_delete_tooltip":"Delete Topic",
+		"topic_delete_aria":"Delete this topic",
+		"topic_unlock_tooltip":"Unlock Topic",
+		"topic_unlock_aria":"Unlock this topic",
+		"topic_lock_tooltip":"Lock Topic",
+		"topic_lock_aria":"Lock this topic",
+		"topic_unpin_tooltip":"Unpin Topic",
+		"topic_unpin_aria":"Unpin this topic",
+		"topic_pin_tooltip":"Pin Topic",
+		"topic_pin_aria":"Pin this topic",
+		"topic_ip_tooltip":"View IP",
+		"topic_ip_full_tooltip":"IP Address",
+		"topic_ip_full_aria":"This user's IP Address",
+		"topic_flag_tooltip":"Flag this topic",
+		"topic_flag_aria":"Flag this topic",
+		"topic_report_tooltip":"Report this topic",
+		"topic_report_aria":"Report this topic",
+		"topic_like_count_aria":"The number of likes on this topic",
+		"topic_like_count_tooltip":"Like Count",
+		"topic_level_aria":"The poster's level",
+		"topic_level_tooltip":"Level",
+		"topic_current_page_aria":"The current page for this topic",
+		"topic_post_like_tooltip":"Like this",
+		"topic_post_like_aria":"Like this post",
+		"topic_post_unlike_tooltip":"Unlike this",
+		"topic_post_unlike_aria":"Unlike this post",
+		"topic_post_edit_tooltip":"Edit Reply",
+		"topic_post_edit_aria":"Edit this post",
+		"topic_post_delete_tooltip":"Delete Reply",
+		"topic_post_delete_aria":"Delete this post",
+		"topic_post_ip_tooltip":"View IP",
+		"topic_post_flag_tooltip":"Flag this reply",
+		"topic_post_flag_aria":"Flag this reply",
+		"topic_post_like_count_tooltip":"Like Count",
+		"topic_post_level_aria":"The poster's level",
+		"topic_post_level_tooltip":"Level",
+		"topic_reply_aria":"The quick reply form",
+		"topic_reply_content":"Insert reply here",
+		"topic_reply_content_alt":"What do you think?",
+		"topic_reply_add_poll_option":"Add new poll option",
+		"topic_reply_button":"Create Reply",
+		"topic_reply_add_poll_button":"Add Poll",
+		"topic_reply_add_file_button":"Add File",
+
+		"topic_level_prefix":"Level ",
+		"topic_your_information":"Your information",
+
+		"paginator_less_than":"&lt;",
+		"paginator_greater_than":"&gt;",
+		"paginator_prev_page":"Prev",
+		"paginator_prev_page_aria":"Go to the previous page",
+		"paginator_next_page":"Next",
+		"paginator_next_page_aria":"Go to the next page",
+
+		"profile_login_for_options":"Login for options",
+		"profile_add_friend":"Add Friend",
+		"profile_unban":"Unban",
+		"profile_ban":"Ban",
+		"profile_report_user_tooltip":"Report User",
+		"profile_report_user_aria":"Report User",
+		"profile_ban_user_head":"Ban User",
+		"profile_ban_user_notice":"If all the fields are left blank, the ban will be permanent.",
+		"profile_ban_user_days":"Days",
+		"profile_ban_user_weeks":"Weeks",
+		"profile_ban_user_months":"Months",
+		"profile_ban_user_reason":"Reason",
+		"profile_ban_user_button":"Ban User",
+		"profile_comments_head":"Comments",
+		"profile_comments_edit_tooltip":"Edit Item",
+		"profile_comments_edit_aria":"Edit Item",
+		"profile_comments_delete_tooltip":"Delete Item",
+		"profile_comments_delete_aria":"Delete Item",
+		"profile_comments_report_tooltip":"Report Item",
+		"profile_comments_report_aria":"Report Item",
+		"profile_comments_form_content":"Insert comment here",
+		"profile_comments_form_button":"Create Reply",
+
 		"ip_search_head":"IP Search",
+		"ip_search_search_button":"Search",
 		"ip_search_no_users":"No users found.",
 
-		"error_head":"An error has occured"
+		"error_head":"An error has occured",
+		"footer_thingymawhatsit":"Can you please keep the powered by notice? ;)",
+		"footer_powered_by":"Powered by Gosora",
+		"footer_made_with_love":"Made with love by Azareal",
+		"footer_theme_selector_aria":"Change the site's appearance",
+
+		"option_yes":"Yes",
+		"option_no":"No",
+
+		"panel_menu_head":"Control Panel",
+		"panel_menu_users":"Users",
+		"panel_menu_groups":"Groups",
+		"panel_menu_forums":"Forums",
+		"panel_menu_settings":"Settings",
+		"panel_menu_word_filters":"Word Filters",
+		"panel_menu_themes":"Themes",
+		"panel_menu_events":"Events",
+		"panel_menu_statistics":"Statistics",
+		"panel_menu_statistics_posts":"Posts",
+		"panel_menu_statistics_topics":"Topics",
+		"panel_menu_statistics_forums":"Forums",
+		"panel_menu_statistics_routes":"Routes",
+		"panel_menu_statistics_agents":"Agents",
+		"panel_menu_statistics_systems":"Systems",
+		"panel_menu_statistics_languages":"Languages",
+		"panel_menu_statistics_referrers":"Referrers",
+		"panel_menu_reports":"Reports",
+		"panel_menu_logs":"Logs",
+		"panel_menu_logs_moderators":"Moderators",
+		"panel_menu_logs_administrators":"Administrators",
+		"panel_menu_system":"System",
+		"panel_menu_plugins":"Plugins",
+		"panel_menu_backups":"Backups",
+		"panel_menu_debug":"Debug",
+
+		"panel_dashboard_head":"Dashboard",
+
+		"panel_users_head":"Users",
+		"panel_users_profile":"Profile",
+		"panel_users_unban":"Unban",
+		"panel_users_ban":"Ban",
+		"panel_users_activate":"Activate",
+
+		"panel_user_head":"User Editor",
+		"panel_user_name":"Name",
+		"panel_user_name_placeholder":"Jane Doe",
+		"panel_user_password":"Password",
+		"panel_user_email":"Email",
+		"panel_user_group":"Group",
+		"panel_user_update_button":"Update User",
+
+		"panel_forums_head":"Forums",
+		"panel_forums_hidden":"Hidden",
+		"panel_forums_edit_button_tooltip":"Edit Forum",
+		"panel_forums_edit_button_aria":"Edit Forum",
+		"panel_forums_update_button":"Update",
+		"panel_forums_delete_button_tooltip":"Delete Forum",
+		"panel_forums_delete_button_aria":"Delete Forum",
+		"panel_forums_full_edit_button":"Full Edit",
+		"panel_forums_create_head":"Add Forum",
+		"panel_forums_create_name_label":"Name",
+		"panel_forums_create_name":"Super Secret Forum",
+		"panel_forums_create_description_label":"Description",
+		"panel_forums_create_description":"Where all the super secret stuff happens",
+		"panel_forums_active_label":"Active",
+		"panel_forums_preset_label":"Preset",
+		"panel_preset_everyone":"Everyone",
+		"panel_preset_announcements":"Announcements",
+		"panel_preset_member_only":"Member Only",
+		"panel_preset_staff_only":"Staff Only",
+		"panel_preset_admin_only":"Admin Only",
+		"panel_preset_archive":"Archive",
+		"panel_preset_custom":"Custom",
+		"panel_forums_create_button":"Add Forum",
+
+		"panel_forum_head_suffix":" Forum",
+		"panel_forum_name":"Name",
+		"panel_forum_name_placeholder":"General Forum",
+		"panel_forum_description":"Description",
+		"panel_forum_description_placeholder":"Where the general stuff happens",
+		"panel_forum_active":"Active",
+		"panel_forum_preset":"Preset",
+		"panel_forum_update_button":"Update Forum",
+		"panel_forum_permissions_head":"Forum Permissions",
+		"panel_forum_edit_button":"Edit",
+		"panel_forum_short_update_button":"Update",
+		"panel_forum_full_edit_button":"Full Edit",
+
+		"panel_groups_head":"Groups",
+		"panel_groups_rank_prefix":"Rank ",
+		"panel_groups_edit_group_button_aria":"Edit Group",
+		"panel_groups_create_head":"Create Group",
+		"panel_groups_create_name":"Name",
+		"panel_groups_create_name_placeholder":"Administrator",
+		"panel_groups_create_type":"Type",
+		"panel_groups_create_tag":"Tag",
+		"panel_groups_create_create_group_button":"Add Group",
+
+		"panel_group_menu_head":"Group Editor",
+		"panel_group_menu_general":"General",
+		"panel_group_menu_promotions":"Promotions",
+		"panel_group_menu_permissions":"Permissions",
+		"panel_group_head_suffix":" Group",
+		"panel_group_name":"Name",
+		"panel_group_name_placeholder":"Random Group",
+		"panel_group_type":"Type",
+		"panel_group_tag":"Tag",
+		"panel_group_tag_placeholder":"VIP",
+		"panel_group_update_button":"Update Group",
+
+		"panel_word_filters_head":"Word Filters",
+		"panel_word_filters_edit_button_aria":"Edit Word Filter",
+		"panel_word_filters_update_button":"Update",
+		"panel_word_filters_delete_button_aria":"Delete Word Filter",
+		"panel_word_filters_no_filters":"You don't have any word filters yet.",
+		"panel_word_filters_create_head":"Add Filter",
+		"panel_word_filters_create_find":"Find",
+		"panel_word_filters_create_find_placeholder":"fuck",
+		"panel_word_filters_create_replacement":"Replacement",
+		"panel_word_filters_create_replacement_placeholder":"fudge",
+		"panel_word_filters_create_create_word_filter_button":"Add Filter",
+
+		"panel_statistics_views_head_suffix":" Views",
+		"panel_statistics_user_agents_head":"User Agents",
+		"panel_statistics_forums_head":"Forums",
+		"panel_statistics_languages_head":"Languages",
+		"panel_statistics_post_counts_head":"Post Counts",
+		"panel_statistics_referrers_head":"Referrers",
+		"panel_statistics_routes_head":"Routes",
+		"panel_statistics_operating_systems_head":"Operating Systems",
+		"panel_statistics_topic_counts_head":"Topic Counts",
+		"panel_statistics_requests_head":"Requests",
+
+		"panel_statistics_time_range_one_month":"1 month",
+		"panel_statistics_time_range_one_week":"1 week",
+		"panel_statistics_time_range_two_days":"2 days",
+		"panel_statistics_time_range_one_day":"1 day",
+		"panel_statistics_time_range_twelve_hours":"12 hours",
+		"panel_statistics_time_range_six_hours":"6 hours",
+
+		"panel_statistics_post_counts_chart_aria":"Post Chart",
+		"panel_statistics_topic_counts_chart_aria":"Topic Chart",
+		"panel_statistics_requests_chart_aria":"Requests Chart",
+		"panel_statistics_details_head":"Details",
+		"panel_statistics_post_counts_table_aria":"Post Table, this has the same information as the post chart",
+		"panel_statistics_topic_counts_table_aria":"Topic Table, this has the same information as the topic chart",
+		"panel_statistics_route_views_table_aria":"View Table, this has the same information as the view chart",
+		"panel_statistics_requests_table_aria":"View Table, this has the same information as the view chart",
+		"panel_statistics_views_suffix":" views",
+		"panel_statistics_posts_suffix":" posts",
+		"panel_statistics_topics_suffix":" topics",
+
+		"panel_statistics_user_agents_no_user_agents":"No user agents could be found in the selected time range",
+		"panel_statistics_forums_no_forums":"No forum view counts could be found in the selected time range",
+		"panel_statistics_languages_no_languages":"No language could be found in the selected time range",
+		"panel_statistics_post_counts_no_post_counts":"No posts could be found in the selected time range",
+		"panel_statistics_referrers_no_referrers":"No referrers could be found in the selected time range",
+		"panel_statistics_routes_no_routes":"No route view counts could be found in the selected time range",
+		"panel_statistics_operating_systems_no_operating_systems":"No operating systems could be found in the selected time range",
+
+		"panel_logs_menu_head":"Logs",
+		"panel_logs_menu_moderation":"Moderation Logs",
+		"panel_logs_menu_administration":"Administration Logs",
+		"panel_logs_moderation_head":"Moderation Logs",
+		"panel_logs_administration_head":"Administration Logs",
+
+		"panel_plugins_head":"Plugins",
+		"panel_plugins_author_prefix":"Author: ",
+		"panel_plugins_settings":"Settings",
+		"panel_plugins_deactivate":"Deactivate",
+		"panel_plugins_activate":"Activate",
+		"panel_plugins_install":"Install",
+
+		"panel_themes_primary_themes":"Primary Themes",
+		"panel_themes_variant_themes":"Variant Themes",
+		"panel_themes_author_prefix":"Author: ",
+		"panel_themes_mobile_friendly_tooltip":"Mobile Friendly",
+		"panel_themes_mobile_friendly_aria":"Mobile Friendly",
+		"panel_themes_default":"Default",
+		"panel_themes_make_default":"Make Default",
+
+		"panel_settings_head":"Settings",
+		"panel_setting_head":"Edit Setting",
+		"panel_setting_name":"Setting Name",
+		"panel_setting_value":"Setting Value",
+		"panel_setting_update_button":"Update Setting",
+
+		"panel_backups_head":"Backups",
+		"panel_backups_download":"Download",
+		"panel_backups_no_backups":"There aren't any backups available at this time.",
+		"panel_debug_head":"Debug",
+		"panel_debug_uptime_label":"Uptime",
+		"panel_debug_open_database_connections_label":"Open DB Conns",
+		"panel_debug_adapter_label":"Adapter"
+	},
+
+	"CSSPhrases": {
+		"pipe":"|",
+
+		"menu_forums":"Forums",
+		"menu_topics":"Topics",
+		"menu_alerts":"Alerts",
+		"menu_account":"Account",
+		"menu_profile":"Profile",
+		"menu_panel":"Panel",
+		"menu_logout":"Logout",
+		"menu_login":"Login",
+		"menu_register":"Register",
+
+		"topics_click_topics_to_select":"Click the topics to select them",
+		"topics_new_topic":"New Topic",
+		"forum_locked":"Locked",
+		"topics_replies_suffix":" replies",
+		"forums_topics_suffix":" topics",
+		"topics_gap_likes_suffix":" likes",
+		"topics_likes_suffix":"likes",
+		"topics_last":"Last",
+		"topics_starter":"Starter",
+		"topic_like_count_suffix":" likes",
+		"topic_plus":"+",
+		"topic_plus_one":"+1",
+		"topic_gap_up":" up",
+		"topic_level":"Level",
+		"topic_edit_button_text":"Edit",
+		"topic_delete_button_text":"Delete",
+		"topic_ip_button_text":"IP",
+		"topic_lock_button_text":"Lock",
+		"topic_unlock_button_text":"Unlock",
+		"topic_pin_button_text":"Pin",
+		"topic_unpin_button_text":"Unpin",
+		"topic_report_button_text":"Report",
+		"topic_flag_button_text":"Flag",
+
+		"panel_rank_admins":"Admins",
+		"panel_rank_mods":"Mods",
+		"panel_rank_banned":"Banned",
+		"panel_rank_guests":"Guests",
+		"panel_rank_members":"Members",
+
+		"panel_preset_announcements":"Announcements",
+		"panel_preset_member_only":"Member Only",
+		"panel_preset_staff_only":"Staff Only",
+		"panel_preset_admin_only":"Admin Only",
+		"panel_preset_archive":"Archive",
+		"panel_preset_public":"Public",
+		"panel_active_hidden":"Hidden",
+
+		"panel_perms_no_access":"No Access",
+		"panel_perms_read_only":"Read Only",
+		"panel_perms_can_post":"Can Post",
+		"panel_perms_can_moderate":"Can Moderate",
+		"panel_perms_custom":"Custom",
+		"panel_perms_default":"Default",
+
+		"panel_edit_button_text":"Edit",
+		"panel_delete_button_text":"Delete"
 	}
 }
