Use arrays for holding fragments rather than using a large number of micro variables. Fixed a typo in a phrase. Fixed a typo in a phrase name in Cosora. Super mods can no longer see the group creation form or click on the groups in the Group Manager (which took them to a no permissions error). Tweaked some of the uglier generated variables.

--- a/langs/english.json
+++ b/langs/english.json
@@ -440,7 +440,7 @@
 		"ip_search_search_button":"Search",
 		"ip_search_no_users":"No users found.",
 
-		"error_head":"An error has occured",
+		"error_head":"An error has occurred",
 		"footer_thingymawhatsit":"Can you please keep the powered by notice? ;)",
 		"footer_powered_by":"Powered by Gosora",
 		"footer_made_with_love":"Made with love by Azareal",
