Changed the defaultest default theme to Cosora... For now.
You need the ViewIPs permission to view IPs on logs now.
Added the leftOfNav and rightOfNav docks, more on this soon.
Added a max length for topic titles.
Added a max length for usernames.
Added none as a possible language for the language view counter.
We began adding the notice phrases.
Fixed a misnamed phrase which was spitting out placeholder text.
Localised unknown for the human language phrases.
Moved routeForums to routes.ForumList.
Moved routeRobotsTxt to routes.RobotsTxt.
Started tracking the views for routes.RobotsTxt.
Moved routeSitemapXml to routes.SitemapXml.
Started tracking the views for routes.SitemapXml.
Changed the fallback theme to Cosora.
Fixed changing the default theme to Cosora or Tempra Conflux.
Removed some redundant type definitions in template init.
Return ErrNoTitle instead of ErrNoBody when trying to create a topic with no title.
Moved some in-progress routes and helper functions for handling search engine crawlers to routes/api.go

--- a/langs/english.json
+++ b/langs/english.json
@@ -143,6 +143,8 @@
 	},
 
 	"HumanLanguages": {
+		"unknown":"Unknown",
+		"none":"None",
 		"af":"Afrikaans",
 		"ar":"Arabic",
 		"az":"Azeri (Latin)",
@@ -227,6 +229,11 @@
 		"zu":"Zulu"
 	},
 
+	"NoticePhrases": {
+		"account_banned":"Your account has been suspended. Some of your permissions may have been revoked.",
+		"account_inactive":"Your account hasn't been activated yet. Some features may remain unavailable until it is."
+	},
+
 	"TmplPhrases": {
 		"menu_forums_tooltip":"Forum List",
 		"menu_forums_aria":"The Forum list",
@@ -304,7 +311,7 @@
 		"quick_topic_avatar_tooltip":"Your Avatar",
 		"quick_topic_avatar_alt":"Your Avatar",
 		"quick_topic_whatsup":"What's up?",
-		"quick_topic_placeholder":"Insert post here",
+		"quick_topic_content_placeholder":"Insert post here",
 		"quick_topic_add_poll_option":"Add new poll option",
 		"quick_topic_create_topic_button":"Create Topic",
 		"quick_topic_add_poll_button":"Add Poll",
